Tables Customers and Addresses working in first version

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Lab1Context": "Data Source=localhost\\SQLEXPRESS;Database=CustomerLab1;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
