--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HotelContext": "Server=(localdb)\\mssqllocaldb;Database=SD_330_F22SD_Labs.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
